--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,43 @@
+amqp==5.1.1
 asgiref==3.6.0
-astroid==2.12.12
-autopep8==2.0.0
-dill==0.3.6
+async-timeout==4.0.2
+billiard==3.6.4.0
+boto3==1.26.101
+botocore==1.29.101
+celery==5.2.7
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cron-descriptor==1.2.35
 Django==4.1.7
-isort==5.10.1
-lazy-object-proxy==1.8.0
-mccabe==0.7.0
-platformdirs==2.5.4
+django-celery-beat==2.5.0
+django-ckeditor==6.5.1
+django-cleanup==7.0.0
+django-js-asset==2.0.0
+django-storages==1.13.2
+django-timezone-field==5.0
+hiredis==2.2.2
+idna==3.4
+jmespath==1.0.1
+kavenegar==1.1.2
+kombu==5.2.4
+Pillow==9.4.0
+prompt-toolkit==3.0.38
 psycopg2-binary==2.9.6
-pycodestyle==2.9.1
-pylint==2.15.5
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.0
+python-crontab==2.7.1
+python-dateutil==2.8.2
+pytz==2023.3
+redis==4.5.4
+requests==2.28.2
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.3
-tomli==2.0.1
-tomlkit==0.11.6
-wrapt==1.14.1
+tzdata==2023.3
+urllib3==1.26.15
+vine==5.0.0
+wcwidth==0.2.6
